Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.911 devel

***   Support or/and/xor array intrinsic methods, bug1210. [Mike Popoloski]

***   Fix ordering of arrayed cell wide connections, bug1202 partial. [Mike Popoloski]

****  Fix LITENDIAN warning on arrayed cells, bug1202. [Mike Popoloski]

****  Fix enum ranges without colons, bug1204. [Mike Popoloski]

****  Fix GCC noreturn compile error, bug1209. [Mike Popoloski]

****  Fix constant function default parameters, bug1211. [Mike Popoloski]

****  Fix non-colon array of interface modports, bug1212. [Mike Popoloski]


* Verilator 3.910 2017-09-07

***   SystemPerl mode (-sp-deprecated) has been removed.

****  Update keyword warnings to include C++11 and others.


* Verilator 3.908 2017-08-28

****  Support x in $readmem, bug1180. [Arthur Kahlich]

****  Support packed struct DPI imports, bug1190. [Rob Stoddard]

****  Fix GCC 6 warnings.

****  Fix compile error on unused VL_VALUEPLUSARGS_IW, bug1181. [Thomas J Whatson]

****  Fix undefined VL_POW_WWI. [Clifford Wolf]

****  Fix internal error on unconnected inouts, bug1187. [Rob Stoddard]


* Verilator 3.906 2017-06-22

***   Support set_time_unit/set_time_precision in C traces, msg2261.

***   Fix extract of packed array with non-zero LSB, bug1172. [James Pallister]

***   Fix shifts by more than 32-bit numbers, bug1174. [Clifford Wolf]

***   Fix power operator on wide constants, bug761. [Clifford Wolf]

***   Fix .* on interface pins, bug1176. [Maciej Piechotka]


* Verilator 3.904 2017-05-30

***   Fix non-cutable ordering loops on clock arrays, bug1009. [Todd Strader]

***   Support ports of array of reals, bug1154. [J Briquet]

***   Support arrayed parameter overrides, bug1153. [John Stevenson]

***   Support $value$plusargs with variables, bug1165. [Wesley Terpstra]

****  Support modport access to un-modport objects, bug1161. [Todd Strader]
