@@ -8,6 +8,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ***   Fix ordering of arrayed cell wide connections, bug1202 partial. [Mike Popoloski]
 
+****  Support module port parameters without defaults, bug 1213. [Mike Popoloski]
+
 ****  Fix LITENDIAN warning on arrayed cells, bug1202. [Mike Popoloski]
 
 ****  Fix enum ranges without colons, bug1204. [Mike Popoloski]
